# LikX

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build-appimage.sh  build-deb.sh  build-flatpak.sh  com.github.aretedriver.likx.yml  install-app.sh  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
AppDir/opt/likx/src/: __init__.py  commands.py  config.py  notification.py  ocr.py  queue.py  recorder.py  scroll_overlay.py  ui.py  uploader.py
LikX/: .gitignore  CLAUDE.md  LikX-3.22.0-x86_64.AppImage  setup.sh
LikX/.github/workflows/: release.yml
LikX/AppDir/opt/likx/: main.py
LikX/AppDir/opt/likx/src/: pinned.py
LikX/debian/: changelog
LikX/src/: command_palette.py  commands.py  config.py  effects.py  hotkeys.py  notification.py  pinned.py  recorder.py  recording_overlay.py  scroll_capture.py  scroll_overlay.py  ui.py  ui_enhanced.py
LikX/tests/: test_capture.py  test_command_palette.py  test_commands.py  test_config.py  test_effects.py  test_history.py  test_hotkeys.py  test_i18n.py  test_notification.py  test_ocr.py  test_overlays.py  test_pinned.py  test_recorder.py  test_scroll_capture.py  test_ui.py  test_ui_enhanced.py  test_uploader.py
Linux_SnipTool/: .gitignore  BEFORE_AFTER_COMPARISON.md  DISTRIBUTION_CHECKLIST.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.sh  GET_STARTED.md  IMPLEMENTATION_SUMMARY.md  PREMIUM_FEATURES.md  PUSH_TO_GITHUB.md  README.md  TESTING_GUIDE.md  build-deb.sh  install-app.sh  linux-sniptool.desktop  main.py  requirements.txt  setup.sh
Linux_SnipTool/debian/: changelog  control  linux-sniptool.desktop  rules
Linux_SnipTool/docs/: CLEANSHOT_COMPARISON.md  COMPREHENSIVE_REVIEW.md  DISTRIBUTION_GUIDE.md  EXECUTIVE_SUMMARY.md  FEATURE_SHOWCASE.md  FINAL_PACKAGE_SUMMARY.txt  QUALITY_ASSURANCE.md  QUICK_START.md  README_BEFORE_PUSH.txt  START_HERE.md
Linux_SnipTool/resources/: style.css
Linux_SnipTool/src/: __init__.py  capture.py  config.py  editor.py  effects.py  history.py  hotkeys.py  notification.py  ocr.py  pinned.py  ui.py  ui_enhanced.py  uploader.py
aur/: .SRCINFO  PKGBUILD  README.md
debian/: changelog
snap/: snapcraft.yaml
src/: __init__.py  capture.py  command_palette.py  commands.py  config.py  editor.py  effects.py  history.py  hotkeys.py  i18n.py  notification.py  ocr.py  pinned.py  radial_menu.py  recorder.py  recording_overlay.py  scroll_capture.py  tray.py  ui.py  ui_enhanced.py  uploader.py
tests/: conftest.py  test_capture.py  test_command_palette.py  test_commands.py  test_config.py  test_editor.py  test_effects.py  test_history.py  test_hotkeys.py  test_i18n.py  test_ocr.py  test_pinned.py  test_radial_menu.py  test_recorder.py  test_scroll_capture.py  test_ui.py  test_uploader.py
